# Adhan

./: .gitignore  README.md
C/: CMakeLists.txt
C/adhan/: CMakeLists.txt  README.md  build.sh
C/adhan/include/: calculation_method.h  calculation_parameters.h  coordinates.h  data_components.h  high_latitude_rule.h  madhab.h  prayer_adjustments.h  prayer_times.h  shadow.h  solar_coordinates.h  solar_time.h
C/adhan/src/: CMakeLists.txt  astronomical.c  calculation_parameters.c  calculation_parameters.h  calendrical_helper.c  data_components.c  example.c  high_latitude_rule.h  madhab.h  prayer.h  prayer_adjustments.h  prayer_times.c  prayer_times.h  solar_coordinates.c  solar_time.c
C/adhan/src/include/: astronomical.h  calculation_method.h  calculation_parameters.h  calendrical_helper.h  data_components.h  double_utils.h  high_latitude_rule.h  madhab.h  prayer.h  prayer_adjustments.h  prayer_times.h  solar_coordinates.h  solar_time.h
C/adhan/src/internal/: astronomical.c  astronomical.h  calendrical_helper.c  calendrical_helper.h  coordinates.h  double_utils.h  solar_coordinates.c  solar_time.c  solar_time.h
C/adhan/src/samples/: example.c
C/adhan/test/: CMakeLists.txt  Test.cpp  astronomical_test.cpp  calculation_method_test.cpp  calculation_parameters_test.cpp  double_utils_test.cpp  example.c  prayer_times_test.cpp
C/adhan/test/lib/: gtest
C/adhan/tools/DownloadProject/: DownloadProject.cmake
C/src/: calculation_method.h  calculation_parameters.c  calculation_parameters.h  data_components.c  data_components.h  high_latitude_rule.h  madhab.h  prayer.h  prayer_adjustments.h  prayer_times.c  prayer_times.h
C/src/internal/: astronomical.c  astronomical.h  calendrical_helper.c  calendrical_helper.h  coordinates.h  double_utils.h  shadow.h  solar_coordinates.c  solar_coordinates.h  solar_time.c  solar_time.h
JavaScript/: Adhan.js
